--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,168 @@
     font-family: Norse;
     src: url(./img/Norse-Bold.otf);
 }
+
+/* Styles for the whole document */
+body {
+    max-width: 100vw;
+
+    font-family: Roboto, Arial, Helvetica, sans-serif;
+}
+
+.content {
+    width: 100vw;
+    display: flex;
+}
+
+
+/* Styles the design left */
+.picture {
+    position: relative;
+    flex: none;
+    width: 40vw;
+
+    max-height: 100vh;
+}
+
+#bg-img {
+    width: 100%;
+    overflow: hidden;
+
+}
+
+.odin {
+    background-color: rgba(0, 0, 0, 0.5); 
+    position: absolute;
+
+    top:20%;
+    bottom: 65%;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.odin > img {
+    height: 70%;
+    width: auto;
+}
+
+.odin > p {
+    font-family: Norse, Roboto, Arial, Helvetica, sans-serif;
+    font-size: 6em;
+    color: white;
+}
+
+/* Styles for the design right */
+.sign-up {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    gap: 4vh;
+
+}
+
+.text {
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 2vw;
+}
+
+#for-inputs{
+    font-weight: bold;
+    font-size: 20px;
+    padding-left: 2vw;
+}
+
+#inputs {
+    width: 60vw;
+
+    margin: 0;
+    margin-bottom: 2vh;
+    border: none;
+    padding-left: 2vw;
+    padding-top: 2vh;
+    padding-bottom: 3vh;
+
+    box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+}
+
+.wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;   
+    gap: 2vh;
+
+    max-width: 600px;
+
+}
+
+
+.input-container {
+    padding-top: 22px;
+    position: relative;
+    margin-right: 3vw;
+}
+
+.input-container > input {
+    flex-basis: 50%;
+    box-sizing: border-box;
+
+    border-color: #E5E7EB;
+    border-style: solid;
+    border-radius: 3px;
+    border-width: 1px;
+    
+    font-size: 12pt;
+
+    height: 110%;
+    width: 110%;
+}
+
+.input-container > input:focus {
+    border-color: blue;
+    outline: none;
+}
+
+.input-container > input:invalid:focus {
+    border-color: red;
+}
+
+.input-container > label {
+    position: absolute;
+    bottom: 25px;
+
+    font-size: 8pt;
+    font-weight: 500;
+
+    text-transform: uppercase;
+}
+
+.invalid {
+    border-color: red;
+}
+
+#submit-btn {
+    background-color: #596D48;
+    border: none;
+    width: 10vw;
+
+    color: white;
+    font-weight: bold;
+    border-radius: 5px;
+    padding: 1em;
+    margin-left: 2vw;
+}
+
+.sign-up-form > p {
+    margin-left: 2vw;
+}
+
+.sign-up-form > p > a {
+    text-decoration: none;
+    color: #596D48;
+    font-weight: bold;
+}
